--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Icsm",
-  "version": "0.0.1-SNAPSHOT",
+  "version": "0.0.1-A1",
   "description": "ICSM",
   "keywords": [
     "Explorer",
@@ -14,19 +14,22 @@
   "homepage": "http://www.ga.gov.au/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GeoscienceAustralia/icsm"
+    "url": "https://github.com/Tomella/fsdf-elvis"
   },
   "dependencies": {
     "express": "^4.13.3",
-    "gulp-insert": "^0.5.0",
     "wiredep": "^3.0.1"
   },
   "devDependencies": {
+    "gulp-insert": "^0.5.0",
     "add-stream": "^1.0.0",
+    "babel-preset-es2015": "^6.9.0",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.6.0",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.5.2",
     "gulp-concat-css": "^2.2.0",
+    "gulp-header": "^1.8.7",
     "gulp-jshint": "^1.11.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
