Replace UTF8 hyphen with dash

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "icsm",
   "version": "0.0.1-A1",
-  "description": "ELVIS – Foundation Spatial Data",
+  "description": "ELVIS - Foundation Spatial Data",
   "keywords": [
     "icsm",
     "pointcloud",
