Replace utf8 hyphen with minus

--- a/resources/config/config.json
+++ b/resources/config/config.json
@@ -62,7 +62,7 @@
          },
          {
          	"description" : "placeholder for layers above the topography",
-         	"name" : "ELVIS – Foundation Spatial Data Map Layers",
+         	"name" : "ELVIS - Foundation Spatial Data Map Layers",
          	"type" : "LayerGroup",
          	"layers": []
          },
@@ -90,7 +90,7 @@
       }
    },
    "layersTab" : {
-   		"group" : "ELVIS – Foundation Spatial Data Map Layers",
+   		"group" : "ELVIS - Foundation Spatial Data Map Layers",
    		"title" : "Layers",
    		"layers" : [
    			{
