--- a/bower.json
+++ b/bower.json
@@ -23,12 +23,12 @@
     "angular": "~1.4.12",
     "components-font-awesome": "~4.5.0",
     "bg-splitter": "*",
-    "leaflet-draw": "~0.3.2",
     "angular-bootstrap": "^1.3.3",
     "seiyria-bootstrap-slider": "^7.1.1",
     "ngAutocomplete": "^1.0.0",
     "ang-accordion": "*",
-    "x2js": "x2js#^1.2.0"
+    "x2js": "x2js#^1.2.0",
+    "leaflet-draw": "^0.3.2"
   },
   "resolutions": {
     "angular": "~1.4.12",
