Basins and catchments search

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
   "license": "http://git.prod.lan/raw/explorer/explorer-icsm.git/master/LICENCE",
   "dependencies": {
     "ga-explorer-map-components": "https://github.com/Tomella/explorer-map-components.git#0.0.6",
-    "explorer-ui-components": "https://github.com/GeoscienceAustralia/explorer-ui-components.git#0.0.6",
+    "explorer-ui-components": "https://github.com/GeoscienceAustralia/explorer-ui-components.git#master",
+    "explorer-search-components": "https://github.com/GeoscienceAustralia/explorer-search-components.git",
     "angular": "~1.4.12",
     "components-font-awesome": "~4.5.0",
     "bg-splitter": "*",
