Add proxy conf to server start

--- a/code-deploy/proxies.conf
+++ b/code-deploy/proxies.conf
@@ -10,4 +10,8 @@
 
     ProxyPass /elvis http://localhost:8080/elvis
     ProxyPassReverse /elvis http://localhost:8080/elvis
+
+    ProxyPass /nswAbstract http://localhost:3000/nswAbstract
+    ProxyPassReverse /nswAbstract http://localhost:3000/nswAbstract
+
 </VirtualHost>
