--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "request": "^2.74.0",
     "wiredep": "^3.0.1",
     "x2js": "^2.0.1",
-    "yargs": "^4.8.1",
-    "cheerio": "latest"
+    "yargs": "^4.8.1"
   },
   "devDependencies": {
     "gulp-insert": "^0.5.0",
