--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "ga-explorer-map-components": "https://github.com/Tomella/explorer-map-components.git#0.0.6",
     "explorer-ui-components": "https://github.com/Tomella/explorer-ui-components.git#master",
     "explorer-search-components": "https://github.com/Tomella/explorer-search-components.git",
+    "leaflet-solr-heatmap": "https://github.com/Tomella/leaflet-solr-heatmap.git#master",
     "angular": "~1.4.12",
     "components-font-awesome": "~4.5.0",
     "bg-splitter": "*",
