Add Qld metadata

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "icsm",
-  "version": "0.0.1-A2",
+  "version": "0.1.3",
   "description": "ELVIS - Foundation Spatial Data",
   "keywords": [
     "icsm",
