--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "icsm",
   "version": "0.1.3",
-  "description": "ELVIS - Foundation Spatial Data",
+  "description": "Elevation",
   "keywords": [
     "icsm",
     "pointcloud",
