--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   ],
   "license": "http://git.prod.lan/raw/explorer/explorer-icsm.git/master/LICENCE",
   "dependencies": {
-    "ga-explorer-map-components": "https://github.com/Tomella/explorer-map-components.git#0.0.6",
+    "ga-explorer-map-components": "https://github.com/Tomella/explorer-map-components.git#master",
     "explorer-ui-components": "https://github.com/Tomella/explorer-ui-components.git#master",
     "explorer-search-components": "https://github.com/Tomella/explorer-search-components.git",
     "leaflet-solr-heatmap": "https://github.com/Tomella/leaflet-solr-heatmap.git#master",
