--- a/code-deploy/proxies.conf
+++ b/code-deploy/proxies.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-    ProxyPass /service/path/elevation http://www.ga.gov.au/explorer-web/service/path/elevation
-    ProxyPassReverse /service/path/elevation http://www.ga.gov.au/explorer-web/service/path/elevation
+    ProxyPass /service/path http://www.ga.gov.au/explorer-web/service/path
+    ProxyPassReverse /service/path http://www.ga.gov.au/explorer-web/service/path
 
     ProxyPass /service http://localhost:3000/service
     ProxyPassReverse /service http://localhost:3000/service
