Add a proxy to touch

--- a/code-deploy/proxies.conf
+++ b/code-deploy/proxies.conf
@@ -11,6 +11,9 @@
     ProxyPass /proxy http://localhost:3000/proxy
     ProxyPassReverse /proxy http://localhost:3000/proxy
 
+    ProxyPass /touch http://localhost:3000/touch
+    ProxyPassReverse /touch http://localhost:3000/touch
+
     ProxyPass /elvis http://localhost:8080/elvis
     ProxyPassReverse /elvis http://localhost:8080/elvis
 
