--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   ],
   "license": "http://git.prod.lan/raw/explorer/explorer-icsm.git/master/LICENCE",
   "dependencies": {
-    "ga-explorer-map-components": "https://github.com/Tomella/explorer-map-components.git#master",
+    "ga-explorer-map-components": "https://github.com/Tomella/explorer-map-components.git#0.1.1",
     "explorer-ui-components": "https://github.com/Tomella/explorer-ui-components.git#master",
     "explorer-search-components": "https://github.com/Tomella/explorer-search-components.git",
     "angular": "~1.4.12",
@@ -36,6 +36,7 @@
   },
   "resolutions": {
     "angular": "~1.4.12",
-    "leaflet-draw": "~1.0.0"
+    "leaflet-draw": "~1.0.0",
+    "leaflet": "^1.2.0"
   }
 }
