--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "ngInfiniteScroll": "1.0.0",
     "babel-polyfill": "^0.0.1",
     "angular-recaptcha": "^4.1.5",
-    "turfjs": "*"
+    "turfjs": "*",
+    "Leaflet.GridLayer.GoogleMutant": "https://gitlab.com/IvanSanchez/Leaflet.GridLayer.GoogleMutant.git#^0.7.1"
   },
   "resolutions": {
     "angular": "~1.4.12",
